Fri Aug 27 07:57:10 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/SharedDomainParticipant/DifferentDatatype/Component/Component.mpc:
          Fixed problem in this file

        * connectors/dds4ccm/NDDS_DDS4CCM_CIAO.mwc:
          Removed this file.

Fri Aug 27 06:40:08 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/DDSEntity/Receiver/Writer_Receiver_exec.cpp:
          Fixed compile error

Fri Aug 27 03:03:43 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/tests/CIAO/Executor-Destructor:
        * DAnCE/tests/CIAO/Executor-Destructor/Component.cdp:
        * DAnCE/tests/CIAO/Executor-Destructor/Exec_Dest_Status.h:
        * DAnCE/tests/CIAO/Executor-Destructor/Exec_Dest_Status.cpp:
        * DAnCE/tests/CIAO/Executor-Destructor/Exec_Dest_export.h:
        * DAnCE/tests/CIAO/Executor-Destructor/Executor_Destructor.idl:
        * DAnCE/tests/CIAO/Executor-Destructor/Executor_Destructor.mpc:
        * DAnCE/tests/CIAO/Executor-Destructor/Executor_Destructor_Interceptor.h:
        * DAnCE/tests/CIAO/Executor-Destructor/Executor_Destructor_Interceptor.cpp:
        * DAnCE/tests/CIAO/Executor-Destructor/Executor_Destructor_exec.h:
        * DAnCE/tests/CIAO/Executor-Destructor/Executor_Destructor_exec.cpp:
        * DAnCE/tests/CIAO/Executor-Destructor/exec-dest.localityconfig:
        * DAnCE/tests/CIAO/Executor-Destructor/run_test.pl:
        * DAnCE/bin/dance_tests.lst:

          A test that verifies that the executor destructors are called for
          CIAO components.

Fri Aug 27 03:02:56 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Daemon/Locality_Manager_Task.cpp:

          Bugfix for command line parsing.

Fri Aug 27 03:02:24 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Daemon/Locality_Manager_Impl.cpp:

          Enable plan pre-processing point.
