@@ -1,3 +1,9 @@
+Fri Aug 27 08:10:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/impl/DDS_Base_Connector_T.cpp:
+          Added trace and added a debug message in the destructor so that
+          we easily can verify in the log that the connector has been deleted
+
 Fri Aug 27 07:57:10 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * connectors/dds4ccm/tests/SharedDomainParticipant/DifferentDatatype/Component/Component.mpc:
